// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form > custom validation works > with error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="true" value="short" aria-describedby="v-0-0-1-error">
        <!--v-if-->
        <!--v-if-->
      </div>
      <div id="v-0-0-1-error" data-slot="error" class="">Must be at least 8 characters</div>
    </div>
  </div>
</form>"
`;

exports[`Form > custom validation works > without error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="false" value="validpassword">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</form>"
`;

exports[`Form > joi validation works > with error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="true" value="short" aria-describedby="v-0-0-1-error">
        <!--v-if-->
        <!--v-if-->
      </div>
      <div id="v-0-0-1-error" data-slot="error" class="">Must be at least 8 characters</div>
    </div>
  </div>
</form>"
`;

exports[`Form > joi validation works > without error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="false" value="validpassword">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</form>"
`;

exports[`Form > renders with default slot correctly 1`] = `"<form id="v-0-0" class="">Form slot</form>"`;

exports[`Form > renders with state correctly 1`] = `"<form id="v-0-0" class=""></form>"`;

exports[`Form > superstruct validation works > with error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="true" value="short" aria-describedby="v-0-0-1-error">
        <!--v-if-->
        <!--v-if-->
      </div>
      <div id="v-0-0-1-error" data-slot="error" class="">Must be at least 8 characters</div>
    </div>
  </div>
</form>"
`;

exports[`Form > superstruct validation works > without error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="false" value="validpassword">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</form>"
`;

exports[`Form > valibot validation works > with error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="true" value="short" aria-describedby="v-0-0-1-error">
        <!--v-if-->
        <!--v-if-->
      </div>
      <div id="v-0-0-1-error" data-slot="error" class="">Must be at least 8 characters</div>
    </div>
  </div>
</form>"
`;

exports[`Form > valibot validation works > without error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="false" value="validpassword">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</form>"
`;

exports[`Form > yup validation works > with error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="true" value="short" aria-describedby="v-0-0-1-error">
        <!--v-if-->
        <!--v-if-->
      </div>
      <div id="v-0-0-1-error" data-slot="error" class="">Must be at least 8 characters</div>
    </div>
  </div>
</form>"
`;

exports[`Form > yup validation works > without error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="false" value="validpassword">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</form>"
`;

exports[`Form > zod validation works > with error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="true" value="short" aria-describedby="v-0-0-1-error">
        <!--v-if-->
        <!--v-if-->
      </div>
      <div id="v-0-0-1-error" data-slot="error" class="">Must be at least 8 characters</div>
    </div>
  </div>
</form>"
`;

exports[`Form > zod validation works > without error 1`] = `
"<form id="42" class="">
  <div data-orientation="vertical" data-slot="root" class="" id="emailField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="email" type="text" name="email" data-slot="base" autocomplete="off" aria-invalid="false" value="bob@dylan.com">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div data-orientation="vertical" data-slot="root" class="" id="passwordField">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="">
      <div data-slot="root" class=""><input id="password" type="text" name="password" data-slot="base" autocomplete="off" aria-invalid="false" value="validpassword">
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</form>"
`;
